# lunaframe

./: .gitignore  README.md  build_client.bat  build_client.sh  installOCV.sh
client/: .gitignore  CMakeLists.txt  CMakePresets.json
client/include/: ansicodes.hpp  comm.hpp  controller.hpp
client/src/: client.cpp  comm.cpp  controller.cpp
server/: .gitignore
server/esp/: platformio.ini
server/esp/include/: Controller.h  Drivetrain.h  LinearActuator.h  Motor.h
server/esp/src/: Controller.cpp  Drivetrain.cpp  LinearActuator.cpp  Motor.cpp  server.cpp
server/nano/: .gitignore  CMakeLists.txt
server/nano/include/: ansicodes.hpp  comm.hpp  gamepad.hpp  nano.hpp  stream.hpp
server/nano/src/: comm.cpp  main.cpp  nano.cpp  stream.cpp
